spacing issues corrected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,7 +82,7 @@ main {
 
 .iconBtn:hover {
     background-position: 100% 0;
-    moz-transition: all .4s ease-in-out;
+    transition: all .4s ease-in-out;
     -o-transition: all .4s ease-in-out;
     -webkit-transition: all .4s ease-in-out;
     transition: all .4s ease-in-out;
